#1909: improvements and corrections